--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.5.RELEASE</version>
     </parent>
+    
+    <distributionManagement>
+         <snapshotRepository>
+                  <id>nexus</id>
+                  <url>http://localhost:8081/nexus/content/repositories/snapshots</url>
+         </snapshotRepository>
+    </distributionManagement>     
+         
 
     <dependencies>
         <dependency>
